--- a/pom.xml
+++ b/pom.xml
@@ -589,5 +589,9 @@
 		<flexmark.version>0.18.3</flexmark.version>
 		<groovy.version>3.0.7</groovy.version>
 		<servlet.version>3.1.0</servlet.version>
+		<sonar.projectKey>kadesc_onedev</sonar.projectKey>
+		<sonar.moduleKey>${artifactId}</sonar.moduleKey>
+  		<sonar.organization>kadesc-1</sonar.organization>
+	  	<sonar.host.url>https://sonarcloud.io</sonar.host.url> 
 	</properties>
 </project>
